Added watch task and also a local port server

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Flex-box playground</title>
+	<link rel="stylesheet" href="builds/production/css/style.css">
+
 </head>
 <body>
 	
