--- a/index.html
+++ b/index.html
@@ -11,13 +11,34 @@
 <div class="flex-container">
 	<div class="box">
 		<h3>Heading 1</h3>
+		<p>Paragraph text</p>
 	</div>
 	<div class="box">
 		<h3>Heading 2</h3>
+		<p>Paragraph text</p>
 	</div>
 	<div class="box">
 		<h3>Heading 3</h3>
+		<p>Paragraph text</p>	
 	</div>
+	<div class="box">
+		<h3>Heading 4</h3>
+		<p>Paragraph text</p>
+		<p>Paragraph text</p>
+	</div>
+	<div class="box">
+		<h3>Heading 5</h3>
+		<p>Paragraph text</p>
+		<p>Paragraph text</p>
+	</div>
+	<div class="box">
+		<h3>Heading 6</h3>
+		<p>Paragraph text more text on one line. One paragraph.</p>	
+	</div>
+	<div class="box">
+		<h3>Heading 7</h3>
+		<p>Paragraph text</p>	
+	</div>	
 </div>
 
 
